[package]
name = "url_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
rayon = "1.5.2"
reqwest = { version = "0.11.10", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
trust-dns-resolver = "0.21.2"
